pill anchor css fix
quick fix for overflowing anchor margins in new pill structure

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -71,8 +71,8 @@ a h1 {
   > a {
     height: 100%;
     display: block;
-    margin: -.3em;
-    padding: .3em;
+    margin: 0 -.3em;
+    padding: 0 .3em;
     color: #fff;
     text-decoration: none;
 
